# lobsters

./: .gitignore  Dockerfile  Gemfile  prepare_database.sql
app/controllers/: comments_controller.rb
app/views/comments/: _comment.html.erb
config/: routes.rb
extras/: noria_interface.rb
noria-interface/: Cargo.toml
noria-interface/src/: lib.rs
test/: orm_test.rb  test_helper.rb
test/fixtures/: comments.yml  hats.yml  hidden_stories.yml  stories.yml  users.yml
test/performance/: comments_index_test.rb
